--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,6 +81,7 @@
         "gestión",
         "gestionar",
         "guardan",
+        "gunicorn",
         "horario",
         "horarios",
         "Humanidades",
@@ -124,6 +125,7 @@
         "Principales",
         "problemas",
         "psycopg",
+        "pycache",
         "Registra",
         "Registrarse",
         "Regístrate",
